--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -2,9 +2,27 @@
 html,body{
     margin: 0;
     padding: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: darkgray;
 }
 
-div{
-    background-color: darkgray ;
-    min-height: 100vh;
+body{
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+main{
+    height: 100vh;
+    position: relative;
+}
+
+section#telefone{
+    width: 600px;
+    height: 700px;
+    position:absolute;
+    margin-left: 50VW;
+    margin-top: 50VH;
+    transform: translate(-50% ,-50%);
+    background: url(../imagens/frame-iphone.png) no-repeat center;
 }
